review fix: update java version