@@ -7,7 +7,6 @@ import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
 import java.time.*;
-import java.util.List;
 import java.util.stream.Stream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
@@ -38,15 +37,15 @@ class ScoreboardTest {
     @Test
     public void shouldStartNewMatch() {
         //Given When
-        Clock fixedClock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
-        LocalDateTime expectedUpdateTime = LocalDateTime.now(fixedClock);
+        var fixedClock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
+        var expectedUpdateTime = LocalDateTime.now(fixedClock);
         scoreboard.setClock(fixedClock);
         scoreboard.startNewMatch(HOME_TEAM_1, AWAY_TEAM_1);
 
         //Then
-        List<Match> matchesInProgress = scoreboard.getSummary();
+        var matchesInProgress = scoreboard.getSummary();
         assertThat(matchesInProgress, hasSize(1));
-        Match match = matchesInProgress.get(0);
+        var match = matchesInProgress.getFirst();
         assertThat(match.getHomeTeam(), equalTo(HOME_TEAM_1));
         assertThat(match.getAwayTeam(), equalTo(AWAY_TEAM_1));
         assertThat(match.getScore().getHomeTeamScore(), equalTo(0));
@@ -57,8 +56,8 @@ class ScoreboardTest {
     @Test
     public void shouldUpdateMatchScore() {
         //Given
-        Clock fixedClock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
-        LocalDateTime expectedUpdateTime = LocalDateTime.now(fixedClock);
+        var fixedClock = Clock.fixed(Instant.now(), ZoneId.systemDefault());
+        var expectedUpdateTime = LocalDateTime.now(fixedClock);
         scoreboard.setClock(fixedClock);
         final int homeTeamScore = 1;
         final int awayTeamScore = 3;
@@ -68,7 +67,7 @@ class ScoreboardTest {
         scoreboard.updateScore(HOME_TEAM_1, AWAY_TEAM_1, homeTeamScore, awayTeamScore);
 
         //Then
-        Match matchInProgress = scoreboard.getSummary().get(0);
+        var matchInProgress = scoreboard.getSummary().getFirst();
         assertThat(matchInProgress.getScore().getHomeTeamScore(), equalTo(homeTeamScore));
         assertThat(matchInProgress.getScore().getAwayTeamScore(), equalTo(awayTeamScore));
         assertThat(matchInProgress.getStarted(), equalTo(expectedUpdateTime));
@@ -83,7 +82,7 @@ class ScoreboardTest {
         scoreboard.finishMatch(HOME_TEAM_1, AWAY_TEAM_1);
 
         //Then
-        List<Match> matchesInProgress = scoreboard.getSummary();
+        var matchesInProgress = scoreboard.getSummary();
         assertThat(matchesInProgress, empty());
     }
 
@@ -100,7 +99,7 @@ class ScoreboardTest {
         scoreboard.updateScore(HOME_TEAM_3, AWAY_TEAM_3, 0, 3);
 
         //When
-        List<Match> matchesInProgress = scoreboard.getSummary();
+        var matchesInProgress = scoreboard.getSummary();
 
         //Then
         assertThat(matchesInProgress, hasSize(3));
@@ -112,17 +111,17 @@ class ScoreboardTest {
     @Test
     public void shouldGetSummaryOfMatchesInProgressOrderedByMostRecentStart_givenTotalScoresAreEqual() {
         //Given
-        Duration toFiveMinutesInThePast = Duration.ofMinutes(-5);
+        var toFiveMinutesInThePast = Duration.ofMinutes(-5);
         scoreboard.setClock(Clock.offset(clock, toFiveMinutesInThePast));
         scoreboard.startNewMatch(HOME_TEAM_1, AWAY_TEAM_1);
         scoreboard.updateScore(HOME_TEAM_1, AWAY_TEAM_1, 0, 0);
 
-        Duration noOffset = Duration.ofMinutes(0);
+        var noOffset = Duration.ofMinutes(0);
         scoreboard.setClock(Clock.offset(clock, noOffset));
         scoreboard.startNewMatch(HOME_TEAM_2, AWAY_TEAM_2);
         scoreboard.updateScore(HOME_TEAM_2, AWAY_TEAM_2, 2, 2);
 
-        Duration toFiveMinutesInTheFuture = Duration.ofMinutes(5);
+        var toFiveMinutesInTheFuture = Duration.ofMinutes(5);
         scoreboard.setClock(Clock.offset(clock, toFiveMinutesInTheFuture));
         scoreboard.startNewMatch(HOME_TEAM_3, AWAY_TEAM_3);
         scoreboard.updateScore(HOME_TEAM_3, AWAY_TEAM_3, 2, 2);
@@ -132,7 +131,7 @@ class ScoreboardTest {
         scoreboard.updateScore(HOME_TEAM_4, AWAY_TEAM_4, 6, 6);
 
         //When
-        List<Match> matchesInProgress = scoreboard.getSummary();
+        var matchesInProgress = scoreboard.getSummary();
 
         //Then
         assertThat(matchesInProgress, hasSize(4));
@@ -148,7 +147,7 @@ class ScoreboardTest {
         scoreboard.startNewMatch(HOME_TEAM_1, AWAY_TEAM_1);
 
         //When Then
-        Exception exception = assertThrows(
+        var exception = assertThrows(
                 IllegalArgumentException.class,
                 () -> scoreboard.startNewMatch(HOME_TEAM_1, AWAY_TEAM_2)
         );
@@ -161,7 +160,7 @@ class ScoreboardTest {
         scoreboard.startNewMatch(HOME_TEAM_1, AWAY_TEAM_1);
 
         //When Then
-        Exception exception = assertThrows(
+        var exception = assertThrows(
                 IllegalArgumentException.class,
                 () -> scoreboard.startNewMatch(HOME_TEAM_2, AWAY_TEAM_1)
         );
@@ -171,7 +170,7 @@ class ScoreboardTest {
     @ParameterizedTest
     @MethodSource("startMatchWithInvalidInput")
     public void shouldNotStartMatch_givenInvalidInput(String homeTeam, String awayTeam) {
-        Exception exception = assertThrows(
+        var exception = assertThrows(
                 IllegalArgumentException.class,
                 () -> scoreboard.startNewMatch(homeTeam, awayTeam)
         );
@@ -188,7 +187,7 @@ class ScoreboardTest {
 
     @Test
     public void shouldNotUpdateScore_givenMatchNotInProgress() {
-        Exception exception = assertThrows(
+        var exception = assertThrows(
                 IllegalArgumentException.class,
                 () -> scoreboard.updateScore(HOME_TEAM_1, AWAY_TEAM_1, 0, 0)
         );
@@ -202,7 +201,7 @@ class ScoreboardTest {
         scoreboard.startNewMatch(HOME_TEAM_1, AWAY_TEAM_1);
 
         //When Then
-        Exception exception = assertThrows(
+        var exception = assertThrows(
                 IllegalArgumentException.class,
                 () -> scoreboard.updateScore(HOME_TEAM_1, AWAY_TEAM_1, homeTeamScore, awayTeamScore)
         );
@@ -218,7 +217,7 @@ class ScoreboardTest {
 
     @Test
     public void shouldNotFinishMatch_givenMatchNotInProgress() {
-        Exception exception = assertThrows(
+        var exception = assertThrows(
                 IllegalArgumentException.class,
                 () -> scoreboard.finishMatch(HOME_TEAM_1, AWAY_TEAM_1)
         );
